objects/Processed_IDP_Raw_Data__e.object
<CustomObject>
    <fields>
        <fullName>IDP_Status__c</fullName>
        <label>IDP Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDP_Product__c</fullName>
        <label>IDP Product</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <label>Opportunity Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Processed IDP Raw Data</label>
    <pluralLabel>Processed IDP Raw Datas</pluralLabel>
</CustomObject>